--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Header -->
     <header>
         <div class="container">
-            <h1 id="header-logo"><a href="index.html">Ryoko Hughes. </a></h1>
+            <h1 id="header-logo"><a href="index.html">Ryoko Hughes</a></h1>
             <nav>
                 <!-- <p class="mobile-nav"></p> -->
                 <ul class="header-nav">
@@ -42,28 +42,33 @@
     <main class="index-content">
         <div class="container">
             <div class="port-thumb">
-                <a href="#" class="port-thumb-link">
+                <a href="work-tabbit.html" class="port-thumb-link">
                     <img src="images/thumb-tabbit.png" alt="Tabbit" class="port-thumb-img">
                 </a>
-            </div>
-
-            <div class="port-thumb">
-                <a href="#">
-                    <img src="images/thumb-moviepath.png" alt="Movie Path" class="port-thumb-img">
-                </a>
-            </div>
-
-            <div class="port-thumb">
-                <a href="#">
-                    <img src="images/thumb-gdol.png" alt="GDOL" class="port-thumb-img">
-                </a>
+                <p class="port-thumb-desc">Tabbit - Mobile App</p>
             </div>
 
             <div class="port-thumb">
                 <a href="#">
                     <img src="images/thumb-npo.png" alt="NPO" class="port-thumb-img">
                 </a>
+                <p class="port-thumb-desc">Cooking Matters - RWD Website</p>
             </div>
+
+            <div class="port-thumb">
+                <a href="#">
+                    <img src="images/thumb-gdol.png" alt="GDOL" class="port-thumb-img">
+                </a>
+                <p class="port-thumb-desc">GDOL - RWD Website</p>
+            </div>
+
+            <div class="port-thumb">
+                <a href="#">
+                    <img src="images/thumb-moviepath.png" alt="Movie Path" class="port-thumb-img">
+                </a>
+                <p class="port-thumb-desc">Movie Path - Mobile App</p>
+            </div>
+
         </div>
     </main>
 
