--- a/work-tabbit.html
+++ b/work-tabbit.html
@@ -25,7 +25,7 @@
                     <li><a href="about.html" title="About">About</a></li>
                     <li class="nav-social-icons">
                         <a href="mailto: info@creativeseals.com" title="Email" class="icon-link"><img src="images/icon-envelope.png" alt="Email"></a>
-                        <a href="#" title="LinkedIn" class="icon-link" target="_blank"><img src="images/icon-linkedin.png" alt="LinkedIn"></a>
+                        <a href="https://www.linkedin.com/in/ryoko-hughes/" title="LinkedIn" class="icon-link" target="_blank"><img src="images/icon-linkedin.png" alt="LinkedIn"></a>
                     </li>
                 </ul>
             </nav>
