HW18 : CSS update

--- a/work-tabbit.html
+++ b/work-tabbit.html
@@ -96,26 +96,18 @@
 
             <h3>Wireframes &amp; Prototype</h3>
             <section class="row">
-                <div class="col col-6 port-item">
+                <div class="col col-12 port-item">
                     <img src="images/tabbit-paper-wire.jpg" alt="Paper Wireframes" class="port-image">
                     <section class="row btn-right">
                         <h5>Paper Wireframes</h5>
                         <!-- <p>Fusce vulputate interdum fermentum. Mauris sollicitudin arcu nibh, et hendrerit nulla et.</p> -->
-                        <p>
-                            <a href="#" title="View Prototype" class="icon-button" target="_blank">
-                                <img src="images/icon-desktop.png" alt="icon" class="btn-icon-img">
-                                <span class="btn-icon-text">View Prototype</span>
-                            </a>
-                        </p>
                     </section>
-                </div>
-                <div class="col col-6 port-item">
                     <img src="images/tabbit-digital-wire.jpg" alt="Digital Wireframes" class="port-image">
                     <section class="row btn-right">
                         <h5>Digital Wireframes</h5>
                         <!-- <p>Fusce vulputate interdum fermentum. Mauris sollicitudin arcu nibh, et hendrerit nulla et.</p> -->
                         <p>
-                            <a href="#" title="View Prototype" class="icon-button" target="_blank">
+                            <a href="https://www.figma.com/proto/OpgqjbjDalngHdB0e976MC/tabbit-wireframes-v3?node-id=1%3A2&scaling=scale-down" title="View Prototype" class="icon-button" target="_blank">
                                 <img src="images/icon-desktop.png" alt="icon" class="btn-icon-img">
                                 <span class="btn-icon-text">View Prototype</span>
                             </a>
