HW18 : Portfolio page images and content

--- a/work-gdol.html
+++ b/work-gdol.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Ryoko Hughes : Tabbit</title>
+    <title>Ryoko Hughes : GDOL</title>
     <link rel="shortcut icon" href="images/favicon.ico">
     <!-- <link rel="stylesheet" href="css/bootstrap.min.css"> -->
     <link rel="stylesheet" href="css/style.css">
@@ -35,8 +35,8 @@
     <!-- Title -->
     <section class="title">
         <div class="container bottom-border">
-            <h2 class="page-title">Tabbit</h2>
-            <p class="page-sub-title">Mobile App for freaquent travelers</p>
+            <h2 class="page-title">GDOL</h2>
+            <p class="page-sub-title">Georgia Department of Labor Website Redesign Project</p>
         </div>
     </section>
 
@@ -48,21 +48,21 @@
                     <h5>Overview</h5>
                     <dl>
                         <dt>My Role:</dt>
-                        <dd>UX Researcher, UX Designer</dd>
+                        <dd>UX/UI Designer</dd>
                         <dt>Problem:</dt>
-                        <dd>Frequent travelers aren’t maximizing their trip potencial. Many times, they have a time management conflict and missed opportunities for various activities.</dd>
+                        <dd>A lot of people lost their jobs while pandemic and having a difficult time finding information about Unemployment Benefits.</dd>
                         <dt>Solution:</dt>
-                        <dd>To provide travelers an effective and efficient trip planning including booking, excursions, and transportations.</dd>
+                        <dd>We’re going to redesign website and re-organize content.</dd>
                     </dl>
                 </div>
                 <div class="col col-6">
-                    <div class="thumb-bg tabbit">
-                        <img src="images/thumb-tabbit.png" alt="Tabbit" class="port-image">
+                    <div class="thumb-bg gdol">
+                        <img src="images/thumb-gdol.png" alt="GDOL" class="port-image">
                     </div>
                 </div>
             </section>
 
-            <h3>User Research</h3>
+            <h3>User Interface Analysis</h3>
             <section class="row bottom-border">
                 <div class="col col-4 port-item">
                     <img src="images/tabbit-affinity-diagram.jpg" alt="Affinity Diagram" class="port-image">
@@ -78,19 +78,27 @@
                 </div>
             </section>
 
-            <h3>Definition &amp; Ideation</h3>
+            <h3>UI Design & Navigation</h3>
             <section class="row bottom-border">
-                <div class="col col-4 port-item">
+                <div class="col col-6 port-item">
                     <img src="images/tabbit-user-scenario.jpg" alt="User Scenario" class="port-image">
-                    <h5>User Scenario</h5>
+                    <h5>Sitemap</h5>
                 </div>
-                <div class="col col-4 port-item">
+                <div class="col col-6 port-item">
                     <img src="images/tabbit-storyboard.jpg" alt="Storyboard" class="port-image">
-                    <h5>Storyboard</h5>
+                    <h5>UI style tile</h5>
                 </div>
-                <div class="col col-4 port-item">
-                    <img src="images/tabbit-user-flow.jpg" alt="User Flow" class="port-image">
-                    <h5>User Flow</h5>
+            </section>
+
+            <h3>Wireframes</h3>
+            <section class="row bottom-border">
+                <div class="col col-6 port-item">
+                    <img src="images/tabbit-user-scenario.jpg" alt="User Scenario" class="port-image">
+                    <h5>Desktop Wireframes</h5>
+                </div>
+                <div class="col col-6 port-item">
+                    <img src="images/tabbit-storyboard.jpg" alt="Storyboard" class="port-image">
+                    <h5>Mobile Wireframes</h5>
                 </div>
             </section>
 
