--- a/index.html
+++ b/index.html
@@ -41,29 +41,29 @@
     <!-- Content -->
     <main class="index-content">
         <div class="container">
-            <div class="port-thumb">
+            <div class="port-thumb tabbit">
                 <a href="work-tabbit.html" class="port-thumb-link">
                     <img src="images/thumb-tabbit.png" alt="Tabbit" class="port-thumb-img">
                 </a>
                 <p class="port-thumb-desc">Tabbit - Mobile App</p>
             </div>
 
-            <div class="port-thumb">
-                <a href="#">
+            <div class="port-thumb cm">
+                <a href="work-cm.html">
                     <img src="images/thumb-npo.png" alt="NPO" class="port-thumb-img">
                 </a>
                 <p class="port-thumb-desc">Cooking Matters - RWD Website</p>
             </div>
 
-            <div class="port-thumb">
-                <a href="#">
+            <div class="port-thumb gdol">
+                <a href="work-gdol.html">
                     <img src="images/thumb-gdol.png" alt="GDOL" class="port-thumb-img">
                 </a>
                 <p class="port-thumb-desc">GDOL - RWD Website</p>
             </div>
 
-            <div class="port-thumb">
-                <a href="#">
+            <div class="port-thumb mp">
+                <a href="work-mp.html">
                     <img src="images/thumb-moviepath.png" alt="Movie Path" class="port-thumb-img">
                 </a>
                 <p class="port-thumb-desc">Movie Path - Mobile App</p>
