HW18 : Added GDOL page content, Media Query tags for Tablet/Mobile view

--- a/work-gdol.html
+++ b/work-gdol.html
@@ -65,27 +65,27 @@
             <h3>User Interface Analysis</h3>
             <section class="row bottom-border">
                 <div class="col col-4 port-item">
-                    <img src="images/tabbit-affinity-diagram.jpg" alt="Affinity Diagram" class="port-image">
-                    <h5>Affinity Diagram</h5>
+                    <img src="images/gdol-proto-persona.png" alt="Proto-persona" class="port-image">
+                    <h5>Proto-persona</h5>
                 </div>
                 <div class="col col-4 port-item">
-                    <img src="images/tabbit-empathy-map.jpg" alt="Empathy Map" class="port-image">
-                    <h5>Empathy Map</h5>
+                    <img src="images/gdol-annotations.png" alt="Annotations" class="port-image">
+                    <h5>Annotations</h5>
                 </div>
                 <div class="col col-4 port-item">
-                    <img src="images/tabbit-user-persona.jpg" alt="User Persona" class="port-image">
-                    <h5>User Persona</h5>
+                    <img src="images/gdol-moodboard.png" alt="Moodboard" class="port-image">
+                    <h5>Moodboard</h5>
                 </div>
             </section>
 
             <h3>UI Design & Navigation</h3>
             <section class="row bottom-border">
                 <div class="col col-6 port-item">
-                    <img src="images/tabbit-user-scenario.jpg" alt="User Scenario" class="port-image">
+                    <img src="images/gdol-sitemap.png" alt="Sitemap" class="port-image">
                     <h5>Sitemap</h5>
                 </div>
                 <div class="col col-6 port-item">
-                    <img src="images/tabbit-storyboard.jpg" alt="Storyboard" class="port-image">
+                    <img src="images/gdol-style.png" alt="UI style tile" class="port-image">
                     <h5>UI style tile</h5>
                 </div>
             </section>
@@ -93,33 +93,33 @@
             <h3>Wireframes</h3>
             <section class="row bottom-border">
                 <div class="col col-6 port-item">
-                    <img src="images/tabbit-user-scenario.jpg" alt="User Scenario" class="port-image">
+                    <img src="images/gdol-wire-desktop.png" alt="Desktop Wireframes" class="port-image">
                     <h5>Desktop Wireframes</h5>
                 </div>
                 <div class="col col-6 port-item">
-                    <img src="images/tabbit-storyboard.jpg" alt="Storyboard" class="port-image">
+                    <img src="images/gdol-wire-mobile.png" alt="Mobile Wireframes" class="port-image">
                     <h5>Mobile Wireframes</h5>
                 </div>
             </section>
 
-            <h3>Wireframes &amp; Prototype</h3>
+            <h3>High-fidelity Design</h3>
             <section class="row">
                 <div class="col col-12 port-item">
-                    <img src="images/tabbit-paper-wire.jpg" alt="Paper Wireframes" class="port-image">
+                    <img src="images/gdol-comp-desktop.jpg" alt="Desktop" class="port-image">
                     <section class="row btn-right">
-                        <h5>Paper Wireframes</h5>
+                        <h5>Desktop Comps</h5>
                         <p>
-                            <a href="https://projects.invisionapp.com/share/VXYZ3IHTQA4#/screens/433566726_01_-_splash_screen" title="View Prototype" class="icon-button" target="_blank">
+                            <a href="https://www.figma.com/proto/30vMYM70sXzPHRvpDloKAF/DOL-U12-Homepage-Comp-RH?node-id=208%3A86&viewport=262%2C467%2C0.18966475129127502&scaling=scale-down" title="View Prototype" class="icon-button" target="_blank">
                                 <img src="images/icon-desktop.png" alt="icon" class="btn-icon-img">
                                 <span class="btn-icon-text">View Prototype</span>
                             </a>
                         </p>
                     </section>
-                    <img src="images/tabbit-digital-wire.jpg" alt="Digital Wireframes" class="port-image">
+                    <img src="images/gdol-comp-mobile.jpg" alt="Desktop" class="port-image">
                     <section class="row btn-right">
-                        <h5>Digital Wireframes</h5>
+                        <h5>Mobile Comps</h5>
                         <p>
-                            <a href="https://www.figma.com/proto/OpgqjbjDalngHdB0e976MC/tabbit-wireframes-v3?node-id=1%3A2&scaling=scale-down" title="View Prototype" class="icon-button" target="_blank">
+                            <a href="https://www.figma.com/proto/30vMYM70sXzPHRvpDloKAF/DOL-U12-Homepage-Comp-RH?node-id=213%3A86&viewport=138%2C267%2C0.44395512342453003&scaling=min-zoom" title="View Prototype" class="icon-button" target="_blank">
                                 <img src="images/icon-desktop.png" alt="icon" class="btn-icon-img">
                                 <span class="btn-icon-text">View Prototype</span>
                             </a>
