HW18 : Added bottom border to Overview heading element. Swapped  "Overview" content order on mobile view
I promise this is my last commit for this week.

--- a/work-cm.html
+++ b/work-cm.html
@@ -36,7 +36,7 @@
     <section class="title">
         <div class="container bottom-border">
             <h2 class="page-title">Cooking Matters</h2>
-            <p class="page-sub-title">NPO Website Redesign Project</p>
+            <p class="page-sub-title">Re-design project of NPO website “Cooking Matters”. We focused on recipes and educational tools.</p>
         </div>
     </section>
 
@@ -55,7 +55,7 @@
                         <dd>Our users need to find resources for efficient and economical recipes with relevant nutritional information to meet their needs.</dd>
                     </dl>
                 </div>
-                <div class="col col-6">
+                <div class="col col-6 port-thumb-img">
                     <div class="thumb-bg cm">
                         <img src="images/thumb-npo.png" alt="Cooking Matters" class="port-image">
                     </div>
