--- a/work-gdol.html
+++ b/work-gdol.html
@@ -36,7 +36,7 @@
     <section class="title">
         <div class="container bottom-border">
             <h2 class="page-title">GDOL</h2>
-            <p class="page-sub-title">Georgia Department of Labor Website Redesign Project</p>
+            <p class="page-sub-title">Re-design project of Georgia Dept of Labor website. I designed low-fi and high-fi wireframes.</p>
         </div>
     </section>
 
@@ -55,7 +55,7 @@
                         <dd>We’re going to redesign website and re-organize content.</dd>
                     </dl>
                 </div>
-                <div class="col col-6">
+                <div class="col col-6 port-thumb-img">
                     <div class="thumb-bg gdol">
                         <img src="images/thumb-gdol.png" alt="GDOL" class="port-image">
                     </div>
