--- a/work-mp.html
+++ b/work-mp.html
@@ -36,7 +36,7 @@
     <section class="title">
         <div class="container bottom-border">
             <h2 class="page-title">Movie Path</h2>
-            <p class="page-sub-title">Help people finding movies</p>
+            <p class="page-sub-title">As a team, we decided to create a movie app. I did User Research and Wireframing.</p>
         </div>
     </section>
 
@@ -55,7 +55,7 @@
                         <dd>Needs to choose movies to watch in a convenient way.</dd>
                     </dl>
                 </div>
-                <div class="col col-6">
+                <div class="col col-6 port-thumb-img">
                     <div class="thumb-bg mp">
                         <img src="images/thumb-moviepath.png" alt="Movie Path" class="port-image">
                     </div>
