--- a/work-tabbit.html
+++ b/work-tabbit.html
@@ -36,7 +36,7 @@
     <section class="title">
         <div class="container bottom-border">
             <h2 class="page-title">Tabbit</h2>
-            <p class="page-sub-title">Mobile App for freaquent travelers</p>
+            <p class="page-sub-title">My first project from the bootcamp. I did User Research, Wireframing, and Prototyping.</p>
         </div>
     </section>
 
@@ -55,7 +55,7 @@
                         <dd>To provide travelers an effective and efficient trip planning including booking, excursions, and transportations.</dd>
                     </dl>
                 </div>
-                <div class="col col-6">
+                <div class="col col-6 port-thumb-img">
                     <div class="thumb-bg tabbit">
                         <img src="images/thumb-tabbit.png" alt="Tabbit" class="port-image">
                     </div>
